new package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.beck.matrain"
+        applicationId "com.matrain.beck"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 77
