--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.matrain.beck"
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 77
-        versionName "2.0"
+        targetSdkVersion 33
+        versionCode 79
+        versionName "2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -25,6 +25,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -37,7 +42,7 @@ dependencies {
 
     implementation 'nl.dionsegijn:konfetti:1.2.2'
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-firestore:22.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
